fixed HTML class name
fixed issue with class name appearing on project

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
   </head>
   <body>
     <div class="container">
-      <div>
-        class="weather-app">
+      <div class="weather-app">
         <div class="card capsule">
           <div class="card-body">
             <div class="search-city-current-location">
