showing current temp and weather conditions

--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
                 <div class="col-3">
                   <h1>
                     <i class="fas fa-sun weather-icon-today"> </i>
-                    <div class="condition-description">Sunny</div>
+                    <div class="condition-description" id="description"></div>
                     <span class="temp-high-low-today">
-                      <span class="high-temp-today">30</span>º|
-                      <span class="low-temp-today">25</span>º
+                      <span id="high-temp-today"></span>º|
+                      <span id="low-temp-today"></span>º
                     </span>
                   </h1>
                 </div>
                 <div class="col-4">
                   <h2>
-                    <span class="current-temperature"> 29</span>ºC
-                    <div id="city">Seville, ES</div>
+                    <span class="current-temperature"> </span>ºC
+                    <div id="city"></div>
                   </h2>
                   <h3>
                     Thursday
@@ -68,8 +68,8 @@
                 </div>
                 <div class="col-5 weather-extras">
                   <p>
-                    Humidity: <span class="humidity">46</span>%<br />
-                    Wind: <span class="wind">6</span> km/h
+                    Humidity: <span id="humidity"></span>%<br />
+                    Wind: <span id="wind"></span> km/h
                   </p>
                 </div>
               </div>
