--- a/index.html
+++ b/index.html
@@ -61,9 +61,8 @@
                     <div id="city"></div>
                   </h2>
                   <h3>
-                    Thursday
-                    <br />
-                    11:46
+                    <span class="last-update">Last updated:</span>
+                    <div id="date"></div>
                   </h3>
                 </div>
                 <div class="col-5 weather-extras">
