--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
               <div class="row current-conditions">
                 <div class="col-3">
                   <h1>
-                    <i class="fas fa-sun weather-icon-today"> </i>
+                    <img src="" alt=" " id="image" />
+
                     <div class="condition-description" id="description"></div>
                     <span class="temp-high-low-today">
                       <span id="high-temp-today"></span>º|
