implemented temp unit conversion

--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
                 </div>
                 <div class="col-4">
                   <h2>
-                    <span class="current-temperature"> </span>ºC
+                    <span id="current-temperature"> </span>º<span
+                      id="temp-symbol"
+                      >C</span
+                    >
                     <div id="city"></div>
                   </h2>
                   <h3>
@@ -133,14 +136,14 @@
               >
                 <button
                   type="button"
-                  class="btn btn-outline-secondary"
+                  class="btn btn-outline-secondary button-celcius active"
                   id="button-c"
                 >
                   ºC
                 </button>
                 <button
                   type="button"
-                  class="btn btn-outline-secondary"
+                  class="btn btn-outline-secondary button-fahrenheit"
                   id="button-f"
                 >
                   ºF
