--- a/index.html
+++ b/index.html
@@ -78,53 +78,7 @@
               </div>
               <div class="card week-ahead">
                 <div class="card-body">
-                  <div class="row">
-                    <div class="col day">
-                      Sat
-                      <div class="weather-icon-future">
-                        <i class="fas fa-sun"></i>
-                      </div>
-                      <div class="temp-high-low-future">
-                        38º | 21º
-                      </div>
-                    </div>
-                    <div class="col day">
-                      Sun
-                      <div class="weather-icon-future">
-                        <i class="fas fa-sun"></i>
-                      </div>
-                      <div class="temp-high-low-future">
-                        39º | 23º
-                      </div>
-                    </div>
-                    <div class="col day">
-                      Mon
-                      <div class="weather-icon-future">
-                        <i class="fas fa-sun"></i>
-                      </div>
-                      <div class="temp-high-low-future">
-                        37º | 24º
-                      </div>
-                    </div>
-                    <div class="col day">
-                      Tues
-                      <div class="weather-icon-future">
-                        <i class="fas fa-sun"></i>
-                      </div>
-                      <div class="temp-high-low-future">
-                        40º | 20º
-                      </div>
-                    </div>
-                    <div class="col day">
-                      Wed
-                      <div class="weather-icon-future">
-                        <i class="fas fa-sun"></i>
-                      </div>
-                      <div class="temp-high-low-future">
-                        39º | 22º
-                      </div>
-                    </div>
-                  </div>
+                  <div class="row" id="forcast"></div>
                 </div>
               </div>
             </div>
