tweaked html/css/js to improve overall appearance on app

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               </div>
               <br />
               <div class="row current-conditions">
-                <div class="col-3">
+                <div class="col-4">
                   <h1>
                     <img src="" alt=" " id="image" />
 
@@ -69,7 +69,7 @@
                     <div id="date"></div>
                   </h3>
                 </div>
-                <div class="col-5 weather-extras">
+                <div class="col-4 weather-extras">
                   <p>
                     Humidity: <span id="humidity"></span>%<br />
                     Wind: <span id="wind"></span> km/h
@@ -78,7 +78,7 @@
               </div>
               <div class="card week-ahead">
                 <div class="card-body">
-                  <div class="row" id="forcast"></div>
+                  <div class="row weather-forcast" id="forcast"></div>
                 </div>
               </div>
             </div>
