fixed bugs in temperature conversion

--- a/index.html
+++ b/index.html
@@ -58,10 +58,8 @@
                 </div>
                 <div class="col-4">
                   <h2>
-                    <span id="current-temperature"> </span>º<span
-                      id="temp-symbol"
-                      >C</span
-                    >
+                    <span id="current-temperature"> </span
+                    ><span id="temp-symbol"></span>
                     <div id="city"></div>
                   </h2>
                   <h3>
