--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
                     autocomplete="off"
                     id="city-input"
                   />
-                  <input type="submit" value="🔎" id="search-button" />
+                  <input
+                    type="submit"
+                    value="🔎"
+                    class="search-button"
+                    id="search-button"
+                  />
                   <br />
                 </form>
                 <button class="current-location-button">
