added strong to today's high temp

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                     <div class="condition-description" id="description"></div>
                     <span class="temp-high-low-today">
-                      <span id="high-temp-today"></span>º|
+                      <strong id="high-temp-today"></strong>º|
                       <span id="low-temp-today"></span>º
                     </span>
                   </h1>
