changed C/F button and app color

--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
               >
                 <button
                   type="button"
-                  class="btn btn-outline-secondary button-celcius active"
+                  class="btn btn-outline-info button-celcius active"
                   id="button-c"
                 >
                   ºC
                 </button>
                 <button
                   type="button"
-                  class="btn btn-outline-secondary button-fahrenheit"
+                  class="btn btn-outline-info button-fahrenheit"
                   id="button-f"
                 >
                   ºF
