added class to search bar and updated CSS

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     placeholder="Search City"
                     autofocus="on"
                     autocomplete="off"
+                    class="city-input"
                     id="city-input"
                   />
                   <input
